--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -1,17 +1,27 @@
 {
   "manifest_version": 3,
-  "name": "LongShot MVP",
-  "version": "0.1.0",
-  "description": "Capture long screenshots from Feishu docs and generic web pages.",
+  "name": "Eazy Share",
+  "version": "0.2.0",
+  "description": "Turn long web articles into clean, shareable images with cropping, split export, and QR back-links.",
   "permissions": ["activeTab", "scripting", "tabs", "downloads", "storage"],
   "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "background.js",
     "type": "module"
   },
+  "icons": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
   "action": {
     "default_popup": "popup.html",
-    "default_title": "LongShot"
+    "default_title": "Eazy Share",
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "32": "icons/icon-32.png"
+    }
   },
   "content_scripts": [
     {
